# PR_assessment

./: Dockerfile  README.md  compose.yaml
ros2_ws/src/linear_algebra_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/linear_algebra_msgs/msg/: MagicVector.msg
ros2_ws/src/linear_algebra_msgs/srv/: MagicInterface.srv
ros2_ws/src/linear_algebra_nodes/: CMakeLists.txt  package.xml
ros2_ws/src/linear_algebra_nodes/config/: data.yaml
ros2_ws/src/linear_algebra_nodes/src/: client_linear_algebra_OOP.cpp  server_linear_algebra_OOP.cpp
ros2_ws/src/ur20_display/: CMakeLists.txt  package.xml
ros2_ws/src/ur20_display/launch/: ur20.launch.py
ros2_ws/src/ur20_display/rviz/: new_config.rviz
ros2_ws/src/ur20_display/src/: joint_configuration_OOP.cpp
ros2_ws/src/ur20_display/urdf/: ur.urdf.xacro  ur_macro.xacro  ur_mocked.urdf.xacro
