<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>linear_algebra_nodes</name>
  <version>0.0.0</version>
  <description>ROS 2 nodes for linear algebra operations including least squares solutions and coordinate transformations</description>
  <maintainer email="bekas.andreas@gmail.com">andreas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen3</depend>
  <depend>yaml-cpp</depend>
  <depend>linear_algebra_msgs</depend>
  <depend>ament_index_cpp</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
